Adding CQRS + MediatR

--- a/GetSocial.API/GetSocial.API.csproj
+++ b/GetSocial.API/GetSocial.API.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
@@ -22,8 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GetSocial.Application\GetSocial.Application.csproj" />
     <ProjectReference Include="..\GetSocial.DAL\GetSocial.DAL.csproj" />
     <ProjectReference Include="..\GetSocial.Domain\GetSocial.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Contracts\Posts\Requests\" />
+    <Folder Include="Contracts\Posts\Responses\" />
   </ItemGroup>
 
 </Project>
