--- a/GetSocial.Application/GetSocial.Application.csproj
+++ b/GetSocial.Application/GetSocial.Application.csproj
@@ -1,9 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Posts\Commands\" />
+    <Folder Include="Posts\Handlers\CommandsHandlers\" />
+    <Folder Include="Posts\Handlers\QueriesHandlers\" />
+    <Folder Include="Posts\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GetSocial.DAL\GetSocial.DAL.csproj" />
+    <ProjectReference Include="..\GetSocial.Domain\GetSocial.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
